--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
           <img class = "newappIcon" src="images/logo-graphic-white.png">
         </td>
         <td>
-          <h1 id="message">Hello World!</h1>
+          <h1 id="message">Hello Demi!</h1>
           <p class="description"></p> Thanks for creating a <a href="https://console.bluemix.net/catalog/services/compose-for-mongodb/"><span class = "blue">Compose for MongoDB sample application</span></a>.
           <h2>Add a word to the database</h2>
           <form id="add-word">
